@@ -2,6 +2,7 @@ package com.fx.xzt.sys.service.impl;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -49,10 +50,30 @@ public class StandardUserServiceImpl extends BaseService<StandardUser> implement
         map.put("brokerName", brokerName);
         map.put("bzh", bzh);
         map.put("isView", isView);
-        PageHelper.startPage(pageNum,pageSize);
-        List<Map<String, Object>> list = standardUserMapper.selectByStandardUser(map);
-        handle(list);
+		List<Map<String, Object>> list = new ArrayList<>();
+		int pages = 0;
+		int total = 0;
+        if ("".equals(bzh)){
+			PageHelper.startPage(pageNum,pageSize);
+			list = standardUserMapper.selectGoldRightGram(map);
+			handle(list,bzh);
+			removeRecord(list,bzh);
+			PageInfo<Map<String, Object>> pagehelper = new PageInfo<>(list);
+			return pagehelper;
+		}else {
+			list = standardUserMapper.selectGoldRightGram(map);
+			handle(list,bzh);
+			removeRecord(list,bzh);
+			pages = list.size()%pageNum == 0?list.size()/pageSize:(list.size()/pageSize+1);
+			total = list.size();
+			if (list.size() != 0){
+				list = list.subList((pageNum-1)*pageSize,pageSize*pageNum>total?total:pageSize*pageNum);
+			}
+
+		}
         PageInfo<Map<String, Object>> pagehelper = new PageInfo<>(list);
+        pagehelper.setTotal(total);
+        pagehelper.setPages(pages);
         return pagehelper;
 	}
 
@@ -73,8 +94,22 @@ public class StandardUserServiceImpl extends BaseService<StandardUser> implement
         map.put("brokerName", brokerName);
         map.put("bzh", bzh);
         map.put("isView", isView);
-        List<Map<String, Object>> list = standardUserMapper.selectByStandardUser(map);
-        handle(list);
+		List<Map<String, Object>> list = new ArrayList<>();
+		if ("1".equals(bzh)){
+			list = standardUserMapper.selectGoldRightGram(map);
+			handle(list,bzh);
+			removeRecord(list,bzh);
+		}else if ("0".equals(bzh)){
+			list = standardUserMapper.selectGoldRightGram(map);
+			handle(list,bzh);
+			removeRecord(list,bzh);
+		}else {
+			list = standardUserMapper.selectGoldRightGram(map);
+			handle(list,bzh);
+			removeRecord(list,bzh);
+		}
+        handle(list,bzh);
+		removeRecord(list,bzh);
         return list;
 	}
 
@@ -88,26 +123,56 @@ public class StandardUserServiceImpl extends BaseService<StandardUser> implement
 	* @throws 
 	* @author htt
 	 */
-	public void handle(List<Map<String, Object>> list) throws ParseException {
+	public void handle(List<Map<String, Object>> list,String bzh) throws ParseException {
 		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
 		if (list != null && list.size() > 0) {
             for (Map<String, Object> map : list) {
-                map.put("bzh", ConstantUtil.isStandardUser.toMap().get(map.get("bzh").toString()));
-                Object registerTimeObj = map.get("RegisterTime");
-       		 	if (registerTimeObj != null && registerTimeObj != "") {
-       		 		map.put("RegisterTime", sdf.format(sdf.parse(registerTimeObj.toString())));
-                }
-	       		Object cjCountObj = map.get("cjCount");
-	    		if (cjCountObj != null && cjCountObj != "") {
-	    		 	Double cjCount = Double.valueOf(cjCountObj.toString());
-                    map.put("cjCount", cjCount/100);
-	            }
-	    		Object rjCountObj = map.get("rjCount");
-	    		if (rjCountObj != null && rjCountObj != "") {
-	    		 	Double rjCount = Double.valueOf(rjCountObj.toString());
-                    map.put("rjCount", rjCount/100);
-	            }
+            	List<Map<String,Object>> records = standardUserMapper.selectNetGoldRecords(new Long(map.get("UserID").toString()));
+				float gram = 0;
+				if (map.get("cjyNum") != null){
+					gram = new Float(map.get("cjyNum").toString());
+				}
+				float sum = 0;
+				for (Map<String, Object> record : records){
+					Float amount = new Float(record.get("amount").toString()) ;
+					int state = Integer.parseInt(record.get("state").toString());
+					if (state == 1){
+						sum += amount;
+					}else {
+						sum -= amount;
+					}
+					if (sum >= 10000){
+						break;
+					}
+				}
+				if (gram >= 50 && sum >= 10000){
+					map.put("bzh", "是");
+				}else {
+					map.put("bzh", "否");
+				}
+				map.put("rjCount",sum);
             }
+		}
+	}
+
+
+	public void removeRecord(List<Map<String, Object>> list,String bzh) throws ParseException {
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+		if (list != null && list.size() > 0) {
+			List<Map<String,Object>> records = new ArrayList<>();
+			for (Map<String, Object> map : list) {
+				if ("1".equals(bzh)){
+					if (map.get("bzh").toString().equals("否")){
+						records.add(map);
+					}
+				}else if ("0".equals(bzh)){
+					if (map.get("bzh").toString().equals("是")){
+						records.add(map);
+					}
+				}
+
+			}
+			list.removeAll(records);
 		}
 	}
 }
